# teace32-rtt

./: CMakeLists.txt  README.md  build.bat  build.sh  main.c
cmake/: linux.cmake  win32.cmake
getopt/: CMakeLists.txt
tcapi/: CMakeLists.txt
tcapi/src/: hlinknet.c  hremote.c
